# Word-Score-App-Django

./: .gitignore  README.md  pyproject.toml
_word_score/: manage.py
_word_score/_word_score/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
_word_score/word_score_app/: apps.py  celery.py  settings.py  tasks.py  urls.py  views.py
_word_score/word_score_app/resources/classes/: page.py  word_scorer.py
_word_score/word_score_app/resources/functions/: build_pages_set.py  count_word_occurrences.py  download_page.py  get_links_in_page.py  word_total_occurencies.py
_word_score/word_score_app/static/css/styles/: styles.css
_word_score/word_score_app/static/js/: script.js
_word_score/word_score_app/templates/: index.html
