[project]
name = "word-score-app-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "celery>=5.4.0",
    "django>=5.1.5",
    "django-celery-beat>=2.7.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
]
